--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,36 +1,45 @@
 @import "tailwindcss";
 
 :root {
-	--background: #ffffff;
-	--foreground: #171717;
+    --background: #800080;
+    --foreground: #171717;
 }
 
 @theme inline {
-	--color-background: var(--background);
-	--color-foreground: var(--foreground);
-	--font-sans: var(--font-geist-sans);
-	--font-mono: var(--font-geist-mono);
+    --color-background: var(--background);
+    --color-foreground: var(--foreground);
+    --font-sans: var(--font-geist-sans);
+    --font-mono: var(--font-geist-mono);
 }
 
 body {
-	background: var(--background);
-	color: var(--foreground);
-	font-family: Arial, Helvetica, sans-serif;
+    background: var(--background);
+    color: var(--foreground);
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 button {
-  background-color: #6c5ce7;
-  color: white;
-  border: none;
-  padding: 0.5em 1em;
-  border-radius: 0.3em;
-  cursor: pointer;
+    background-color: #6c5ce7;
+    color: white;
+    border: none;
+    padding: 0.5em 1em;
+    border-radius: 0.3em;
+    cursor: pointer;
 }
 
-input[type=file]::file-selector-button {
-  border: 2px solid #6c5ce7;
-  padding: .2em .4em;
-  border-radius: .2em;
-  background-color: #a29bfe;
-  cursor: pointer;
+input[type="file"]::file-selector-button {
+    border: 2px solid #6c5ce7;
+    padding: 0.2em 0.4em;
+    border-radius: 0.2em;
+    background-color: #a29bfe;
+    cursor: pointer;
+}
+
+/* Converts png to pure white while respecting its transparency */
+.white-filter {
+    filter: brightness(0) invert(1);
+}
+
+.flip-horizontal {
+    transform: scaleX(-1);
 }
