--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 :root {
-    --background: #800080;
+    --background: #a29bfe;
     --foreground: #171717;
 }
 
@@ -18,7 +18,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-button {
+button, a {
     background-color: #6c5ce7;
     color: white;
     border: none;
